--- a/esercitazione_2/app/src/main/res/layout/activity_show_results.xml
+++ b/esercitazione_2/app/src/main/res/layout/activity_show_results.xml
@@ -39,7 +39,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/nome"/>
+                android:id="@+id/attrNomeRes"/>
 
             <!-- Cognome -->
             <Space
@@ -53,7 +53,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/cognome"/>
+                android:id="@+id/attrCognomeRes"/>
 
             <!-- Data di nascita -->
             <Space
@@ -67,7 +67,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/data"/>
+                android:id="@+id/attrDataRes"/>
 
             <Space
                 android:layout_width="match_parent"
